# portfolio

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml  flake.nix
.direnv/: flake-profile-1-link
backend/: Dockerfile  pyproject.toml
backend/app/: data.py  main.py  schemas.py  security.py  settings.py  storage.py
backend/tests/: test_api.py
docs/: architecture.md
frontend/: .prettierignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/app/about/: page.tsx
frontend/app/articles/: page.tsx
frontend/app/articles/[slug]/: page.tsx
frontend/app/career/: CareerPage.module.css  page.tsx
frontend/app/contact/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/research/: page.tsx
frontend/app/server/: page.tsx
frontend/components/: ContactForm.module.css  ContactForm.tsx  FlipCounter.module.css  FlipCounter.tsx  HeroScene.module.css  HeroScene.tsx  HomePage.module.css  HomePage.tsx  MetricsShowcase.module.css  MetricsShowcase.tsx  PageTransition.module.css  PageTransition.tsx  PageViewTracker.tsx  PortfolioPage.module.css  PortfolioPage.tsx  ScrollReveal.tsx  SiteFrame.module.css  SiteFrame.tsx  TrackedLink.tsx
frontend/content/: projects.ts
frontend/lib/: api.ts  apiBase.ts  interactions.ts  portfolioObjects.ts  projects.ts  session.ts  siteNavigation.ts  types.ts
frontend/public/models_512/: about.glb  about.optimized.glb  career.glb  contact.glb  github.glb  project.glb  research.glb  server.glb
frontend/tests/: smoke.test.mjs
(+1 files in other folders)
