[project]
name = "portfolio-backend"
version = "0.1.0"
description = "FastAPI backend for portfolio contact and analytics"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.12",
  "pydantic>=2.11.4",
  "email-validator>=2.2.0",
  "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
